--- a/src/app/components/almacen/almacen.component.html
+++ b/src/app/components/almacen/almacen.component.html
@@ -16,7 +16,7 @@
 
     <div class="row">
         <div class="col-md-4 ml-3 mb-2 abc">
-            <input type="search " placeholder="buscar..." id="buscador" name="buscador" class="form-control imput-buscar" [value]="busquedaInventario" (input)="busquedaInventario = $event.target.value">
+            <input type="search" placeholder="buscar..." id="buscador" name="buscador" class="form-control imput-buscar" [value]="busquedaInventario" (input)="busquedaInventario = $event.target.value">
         </div>
         <div class="col-md-1 div-boton">
             <button (click)="buscarInventario()" class="btn btn-primary boton-buscar">Buscar</button>
@@ -51,7 +51,7 @@
                     <td data-titulo="F.Vencimiento"> {{ inventario.fechaVencimiento | date:'yyyy/M/d' }} </td>
                     <td class="td-iconos">
                         <i (click)="showPositionDialog(inventario)" class="pi pi-pencil btn-outline-primary icono-table"></i>
-                        <i (click)="eliminarInventarios(inventario)" class="pi pi-trash btn-outline-danger icono-table"></i>
+                        <i (click)="confirmarElimInventario(inventario)" class="pi pi-trash btn-outline-danger icono-table"></i>
                     </td>
                 </tr>
             </ng-template>
@@ -59,5 +59,24 @@
     </div>
 
     <p-toast [style]="{width: '80vw'}"></p-toast>
-    <p-confirmDialog [style]="{width: '50vw'}" [baseZIndex]="10000" rejectButtonStyleClass="p-button-text"></p-confirmDialog>
+
+    <p-toast position="top-center" (onClose)="onReject()" key="e"  [baseZIndex]="5000">
+      <ng-template let-message pTemplate="message">
+          <div class="p-flex p-flex-column" style="flex: 1">
+              <div class="p-text-center-botones">
+                  <i class="pi pi-exclamation-triangle" style="font-size: 3rem"></i>
+                  <h4>{{message.summary}}</h4>
+                  <p>{{message.detail}}</p>
+              </div>
+              <div class="row botonesConfirmacion ">
+                  <div class="col-md-6">
+                      <button type="button" pButton (click)="eliminarInventarios(inventario)" label="Yes" class="p-button-success buttonSuccess"></button>
+                  </div>
+                  <div class="col-md-6">
+                      <button type="button" pButton (click)="onReject()" label="No" class="p-button-secondary buttonSecondary"></button>
+                  </div>
+              </div>
+          </div>
+        </ng-template>
+    </p-toast>
 </div>
