--- a/src/app/components/clientes/clientes.component.html
+++ b/src/app/components/clientes/clientes.component.html
@@ -57,7 +57,7 @@
 
     <div class="row">
         <div class="col-md-4 ml-3 mb-2 abc">
-            <input type="search " placeholder="buscar..." id="buscador" name="buscador" class="form-control imput-buscar" [value]="busquedaCliente" (input)="busquedaCliente = $event.target.value">
+            <input type="search" placeholder="buscar..." id="buscador" name="buscador" class="form-control imput-buscar" [value]="busquedaCliente" (input)="busquedaCliente = $event.target.value">
         </div>
         <div class="col-md-1 div-boton">
             <button class="btn btn-primary boton-buscar">Buscar</button>
@@ -92,7 +92,7 @@
                     <!--     <td data-titulo="Nit"> {{ cliente.nit }} </td> -->
                     <td class="td-iconos">
                         <i (click)="showPositionDialog(cliente)" class="pi pi-pencil btn-outline-primary icono-table"></i>
-                        <i (click)="eliminarCliente(cliente)" class="pi pi-trash btn-outline-danger icono-table"></i>
+                        <i (click)="confirmarElimCliente(cliente)" class="pi pi-trash btn-outline-danger icono-table"></i>
                         <i (click)="detalleExtintor('center')" class="pi pi-list btn-outline-success icono-table"></i>
                     </td>
                 </tr>
@@ -101,5 +101,24 @@
     </div>
 
     <p-toast [style]="{width: '80vw'}"></p-toast>
-    <p-confirmDialog [style]="{width: '50vw'}" [baseZIndex]="10000" rejectButtonStyleClass="p-button-text"></p-confirmDialog>
+
+    <p-toast position="center" (onClose)="onReject()" key="i"  [baseZIndex]="5000">
+      <ng-template let-message pTemplate="message">
+          <div class="p-flex p-flex-column" style="flex: 1">
+              <div class="p-text-center-botones">
+                  <i class="pi pi-exclamation-triangle" style="font-size: 3rem"></i>
+                  <h4>{{message.summary}}</h4>
+                  <p>{{message.detail}}</p>
+              </div>
+              <div class="row botonesConfirmacion ">
+                  <div class="col-md-6">
+                      <button type="button" pButton (click)="eliminarCliente(empleado)" label="Yes" class="p-button-success buttonSuccess"></button>
+                  </div>
+                  <div class="col-md-6">
+                      <button type="button" pButton (click)="onReject()" label="No" class="p-button-secondary buttonSecondary"></button>
+                  </div>
+              </div>
+          </div>
+        </ng-template>
+    </p-toast>
 </div>
