--- a/src/app/components/factura/factura.component.css
+++ b/src/app/components/factura/factura.component.css
@@ -8,13 +8,13 @@
     margin: 10px;
 }
 
-h2 {
+.tituloPincipal {
     margin-bottom: 10px;
     margin-left: 5px;
     text-transform: uppercase;
 }
 
-h4 {
+.subtitulo {
     margin-top: 20px;
     margin-left: 5px;
     text-transform: uppercase;
