--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<footer *ngIf="isLogged">
     <div class=" text-white footer">
         <p class="p1">&copy; Copyright 2021 Todos los derechos reservados CUERPO DE BOMBEROS VOLUNTARIOS AMALFI - CONTRARIESGO S.A.S</p>
         <P class="p2">bomberosamalfi1@gmail.com - coordinacionsos@amalfi-antioquia.gov.co | 313 711 1917 - 310 426 7578</P>
