--- a/src/app/components/productos/productos.component.html
+++ b/src/app/components/productos/productos.component.html
@@ -16,7 +16,7 @@
 
     <div class="row">
         <div class="col-md-4 ml-3 mb-2 abc">
-            <input type="search " placeholder="buscar..." id="buscador" name="buscador" class="form-control imput-buscar" [value]="busquedaProducto" (input)="busquedaProducto = $event.target.value">
+            <input type="search" placeholder="buscar..." id="buscador" name="buscador" class="form-control imput-buscar" [value]="busquedaProducto" (input)="busquedaProducto = $event.target.value">
         </div>
         <div class="col-md-1 div-boton">
             <button class="btn btn-primary boton-buscar" (click)="buscarProducto()">Buscar</button>
@@ -43,8 +43,7 @@
                     <td data-titulo="Producto"> {{ producto.idTipoExtintor }} </td>
                     <td class="td-iconos">
                         <i (click)="showPositionDialog(producto)" class="pi pi-pencil btn-outline-primary icono-table"></i>
-                        <i (click)="showConfirm(producto)" class="pi pi-trash btn-outline-danger icono-table"></i>
-                        <!-- <i (click)="eliminarProducto2(producto)" class="pi pi-trash btn-outline-danger icono-table"></i> -->
+                        <i (click)="confirmarElimProducto(producto)" class="pi pi-trash btn-outline-danger icono-table"></i>
                     </td>
                 </tr>
             </ng-template>
@@ -52,17 +51,16 @@
     </div>
 
     <p-toast [style]="{width: '80vw'}"></p-toast>
-    <p-confirmDialog [style]="{width: '50vw'}" [baseZIndex]="10000" rejectButtonStyleClass="p-button-text"></p-confirmDialog>
 
     <p-toast position="top-center" (onClose)="onReject()" key="c"  [baseZIndex]="5000">
       <ng-template let-message pTemplate="message">
-          <div class="p-flex p-flex-column contenConfirmar" style="flex: 1">
-              <div class="p-text-center">
+          <div class="p-flex p-flex-column" style="flex: 1">
+              <div class="p-text-center-botones">
                   <i class="pi pi-exclamation-triangle" style="font-size: 3rem"></i>
                   <h4>{{message.summary}}</h4>
                   <p>{{message.detail}}</p>
               </div>
-              <div class="row ">
+              <div class="row botonesConfirmacion ">
                   <div class="col-md-6">
                       <button type="button" pButton (click)="eliminarProducto(producto)" label="Yes" class="p-button-success buttonSuccess"></button>
                   </div>
@@ -71,6 +69,6 @@
                   </div>
               </div>
           </div>
-      </ng-template>
-  </p-toast>
+        </ng-template>
+    </p-toast>
 </div>
